fix: removed overflow:hidden attribute from full-height-wrapper

--- a/src/components/input-panel/index.css
+++ b/src/components/input-panel/index.css
@@ -7,5 +7,4 @@
 
 .full-height-wrapper > .full-height-wrapper {
   flex: 1;
-  overflow: hidden;
 }
